# newRepo

./: .gitmodules  CMakeLists.txt
Desktop/PAED/Codi/src/: Dataset.java  quickSort.java  selectionSort.java
Desktop/PAED/Java/: Main.java
Desktop/recu/: CMakeLists.txt  Client.c  Client.h  Discount.c  Discount.h  Register.c  Register.h  Shop.c  Shop.h  Shops.txt  TDD.c  TDD.h  main.c
Desktop/recu/Llibreria Recuperació-20250406/: operations.c  operations.h
